<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#1E434C"
    android:orientation="vertical"
    tools:context=".Home"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:src="@drawable/jtp1"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#1E434C"
        android:orientation="horizontal">

        <Button
            android:id="@+id/butdeskripsi"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:background="#C99E10"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/galeri"
            android:textColor="#9B4F0F"
            android:textStyle="bold" />

        <Button
            android:id="@+id/butgmaps"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:background="#C99E10"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:text="@string/maps"
            android:textColor="#9B4F0F"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/butfasilitas"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="#C99E10"
            android:layout_weight="10"
            android:text="@string/fasilitas"
            android:textColor="#9B4F0F"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonLogout"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="#C99E10"
            android:layout_weight="10"
            android:text="@string/logout"
            android:textColor="#9B4F0F"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>